--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,11 +1,11 @@
-<form>
+<form action='/', method='POST'>
   <div class="form-group">
     <label for="email">Email address:</label>
-    <input type="email" class="form-control" id="email">
+    <input type="email" class="form-control" id="email" value='awesomeEmail@yahoo.com'>
   </div>
   <div class="form-group">
     <label for="username">Username:</label>
-    <input type="text" class="form-control" id="username">
+    <input type="text" class="form-control" id="username" value='Bob'>
   </div>
   <button type="submit" class="btn btn-default">Login/Signup</button>
 </form>
