profile submission form

--- a/views/newProfile.handlebars
+++ b/views/newProfile.handlebars
@@ -13,8 +13,8 @@
   </div>
   <div class="form-group">
     <label for="gender">Gender</label>
-    <input type="radio" class="form-control" name="gender" value='Male'>Male
-    <input type="radio" class="form-control" name="gender" value='Female'>Female
+    <input type="radio" name="gender" value='Male'>Male
+    <input type="radio" name="gender" value='Female'>Female
   </div>
   <div class="form-group">
     <label for="location">Location</label>
@@ -43,7 +43,7 @@
     </select>
   </div>
   <div class='form-group'>
-    <label for="height">Height</label>
+    <label for="height">Height: </label>
     <label for="Feet">Feet</label>
     <select name='feet'>
       <option value= '2'>2</option>
@@ -54,7 +54,7 @@
       <option value= '7'>7</option>
       <option value= '8'>8</option>
     </select>
-    <label for="inches">Kids?</label>
+    <label for="inches">Inches</label>
     <select name='inches'>
       <option value= '0'>0</option>
       <option value= '1'>1</option>
@@ -78,19 +78,19 @@
   <!-- tons of text here -->
   <div class="form-group">
     <label for="about">About Me:</label>
-    <input type="textarea" class="form-control" name="about" value={{username}}>
+    <textarea class="form-control" name="about" placeholder="I am pretty much the best.">I am pretty much the best. *flexes*</textarea>
   </div>
   <div class="form-group">
     <label for="talents">talents:</label>
-    <textarea class="form-control" name="talents" placeholder="things and stuff"> </textarea>
+    <textarea class="form-control" name="talents" placeholder="things and stuff">I can bench-press three longboats, four on a good day.</textarea>
   </div>
   <div class="form-group">
     <label for="favoriteThings">Favorite Things:</label>
-    <textarea class="form-control" name="favoriteThings" placeholder="Rain drops on roses and whiskers on kittens, bright copper kettles and warm woolen mittens"> </textarea>
+    <textarea class="form-control" name="favoriteThings" placeholder="Rain drops on roses and whiskers on kittens, bright copper kettles and warm woolen mittens">Kittens, flowers, honeysuckle, and the blood of my enemies spilt upon the ground.</textarea>
   </div>
   <div class="form-group">
     <label for="why">Why you should message me</label>
-    <textarea class="form-control" name="why" placeholder="things and stuff"> </textarea>
+    <textarea class="form-control" name="why" placeholder="things and stuff">I will kill you if you do not.</textarea>
   </div>
   <button class='btn btn-submit'>TIME TO FIND SOME VIKINGS!</button>
 
