--- a/views/newProfile.handlebars
+++ b/views/newProfile.handlebars
@@ -1,4 +1,4 @@
-<form action='/', method='POST'>
+<form action='/users/new', method='POST'>
   <div class="form-group">
     <label for="email">Email address:</label>
     <input type="email" class="form-control" name="email" value={{email}}>
