--- a/views/newProfile.handlebars
+++ b/views/newProfile.handlebars
@@ -9,11 +9,11 @@
   </div>
   <div class="form-group">
     <label for="age">age:</label>
-    <input type="text" class="form-control" name="age" value='999999999999'>
+    <input type="text" class="form-control" name="age" value='99'>
   </div>
   <div class="form-group">
     <label for="gender">Gender</label>
-    <input type="radio" name="gender" value='Male'>Male
+    <input type="radio" name="gender" value='Male' checked>Male
     <input type="radio" name="gender" value='Female'>Female
   </div>
   <div class="form-group">
